--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -56,10 +56,11 @@
 
 		<StackPanel Orientation="Horizontal"
 					HorizontalAlignment="Center"
-					Grid.ColumnSpan="2">
-			<TextBlock Text="Select your account region " 
+					Grid.ColumnSpan="2"
+					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
+			<TextBlock Text="Select your account region "
 					   Focusable="True"
-					   VerticalAlignment="Center"/>
+					   VerticalAlignment="Center" />
 			<RadioButton Content="EU"
 						 Margin="2"
 						 Padding="0"
@@ -71,6 +72,13 @@
 						 VerticalContentAlignment="Center"
 						 IsChecked="{Binding SelectedRegion, ConverterParameter={x:Static root:Constants.CloudUSUrl}, Converter={StaticResource RadioButtonCheckedConverter}}" />
 		</StackPanel>
+
+		<TextBlock Text="{Binding SelectedRegionUIMessage}"
+				   Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				   Grid.ColumnSpan="2"
+				   Focusable="True"
+				   VerticalAlignment="Center"
+				   HorizontalAlignment="Center" />
 
 		<StackPanel Grid.Row="1"
 					Grid.ColumnSpan="2"
@@ -88,7 +96,7 @@
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
 					CommandParameter="{x:Static root:AuthenticationType.CloudSSO}"
-					ToolTip="{x:Static root:PluginResources.Auth_Cloud_FSSO_ToolTip}"
+					ToolTip="Supports Single Sign-On across external domains and organisations."
 					Cursor="Hand"
 					Width="176"
 					Height="32"
