--- a/LanguageWeaverProvider/Controls/ToggleOption.xaml
+++ b/LanguageWeaverProvider/Controls/ToggleOption.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					xmlns:local="clr-namespace:LanguageWeaverProvider.Controls"
 					xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters">
 
@@ -14,7 +14,6 @@
 	<converters:BoolToBrushConverter x:Key="BrushConverter"
 									 TrueBrush="#4ed164"
 									 FalseBrush="#eaeaea" />
-
 
 	<Style x:Key="SwitchCheckBoxStyle"
 		   TargetType="CheckBox">
@@ -205,24 +204,20 @@
 							</Style>
 						</Border.Style>
 
-						<Grid>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="*" />
-								<RowDefinition Height="Auto" />
-							</Grid.RowDefinitions>
-
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" />
-							</Grid.ColumnDefinitions>
-
 							<Grid Grid.Row="0"
 								  Grid.Column="0">
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="Auto" />
 									<ColumnDefinition Width="Auto" />
+									<ColumnDefinition Width="Auto" />
 									<ColumnDefinition Width="*" />
 									<ColumnDefinition Width="Auto" />
 								</Grid.ColumnDefinitions>
+
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="*" />
+								</Grid.RowDefinitions>
 
 								<CheckBox Grid.Column="0"
 										  x:Name="ToggleCheckBox"
@@ -233,6 +228,14 @@
 										  VerticalAlignment="Center"
 										  Margin="0 0 4 0" />
 
+							<TextBlock Grid.Row="1"
+									   Grid.Column="0"
+									   Grid.ColumnSpan="5"
+									   Text="{TemplateBinding DescriptionText}"
+									   FontSize="10"
+									   TextWrapping="Wrap"
+									   Focusable="True" />
+									  
 								<TextBlock Grid.Column="1"
 										   Text="{TemplateBinding CheckBoxContent}"
 										   FontSize="16"
@@ -243,7 +246,8 @@
 										   Margin="8 0" />
 
 								<TextBox Grid.Column="2"
-										 Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TextBoxText}"
+										 Grid.ColumnSpan="2"
+										 Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TextBoxText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 										 Style="{StaticResource WatermarkTextBox}"
 										 local:TextBoxWatermarkHelper.WatermarkText="{TemplateBinding CheckBoxContent}"
 										 local:TextBoxWatermarkHelper.IsWatermarkVisible="True"
@@ -262,9 +266,21 @@
 									</TextBox.Visibility>
 								</TextBox>
 
-								<Button x:Name="ActionButton" Grid.Column="3"
+								<TextBlock Grid.Column="3"
+										   Text="{TemplateBinding TextBlockText}"
+										   Visibility="{TemplateBinding TextBlockVisibility, Converter={StaticResource BooleanConverter}}"
+										   Focusable="True"
+										   TextWrapping="Wrap"
+										   VerticalAlignment="Center"
+										   HorizontalAlignment="Left"
+										   Margin="0 4 0 0" />
+
+								<Button x:Name="ActionButton"
+										Grid.Column="4"
 										Content="{TemplateBinding ButtonContent}"
 										Style="{StaticResource Sdl.Button.PrimaryStyle}"
+										Command="{TemplateBinding ButtonCommand}"
+										CommandParameter="{TemplateBinding ButtonParameter}"
 										Width="80"
 										Height="24"
 										Cursor="Hand"
@@ -283,16 +299,8 @@
 										</MultiBinding>
 									</Button.Visibility>
 								</Button>
-							</Grid>
-
-							<TextBlock Grid.Row="1"
-									   Grid.Column="0"
-									   Grid.ColumnSpan="2"
-									   Text="{TemplateBinding DescriptionText}"
-									   FontSize="10"
-									   TextWrapping="Wrap"
-									   Focusable="True" />
 						</Grid>
+
 					</Border>
 				</ControlTemplate>
 			</Setter.Value>
