--- a/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
@@ -22,7 +22,22 @@
 
 			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
-
+			
+			<Style TargetType="ToolTip">
+				<Style.Resources>
+					<Style TargetType="ContentPresenter">
+						<Style.Resources>
+							<Style TargetType="TextBlock">
+								<Setter Property="TextWrapping"
+										Value="Wrap" />
+							</Style>
+						</Style.Resources>
+					</Style>
+				</Style.Resources>
+				<Setter Property="MaxWidth"
+						Value="320" />
+			</Style>
+			
 		</ResourceDictionary>
 	</UserControl.Resources>
 	<Grid>
@@ -38,11 +53,12 @@
 		</Grid.RowDefinitions>
 
 		<Button Grid.Row="0"
-				Content="{x:Static root:PluginResources.Auth_SSO}"
+				Content="Single sign-on"
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
 				Command="{Binding SelectAuthenticationTypeCommand}"
 				CommandParameter="{x:Static root:AuthenticationType.EdgeSSO}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+				ToolTip="Access Language Weaver Edge using Single Sign-On (SSO): Streamline login with one set of credentials for improved security and user convenience."
 				Cursor="Hand"
 				Width="176"
 				Height="32"
@@ -54,6 +70,7 @@
 				Command="{Binding SelectAuthenticationTypeCommand}"
 				CommandParameter="{x:Static root:AuthenticationType.EdgeCredentials}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+				ToolTip="{x:Static root:PluginResources.Auth_Cloud_Credentials_ToolTip}"
 				Cursor="Hand"
 				Width="176"
 				Height="32"
@@ -65,6 +82,7 @@
 				Command="{Binding SelectAuthenticationTypeCommand}"
 				CommandParameter="{x:Static root:AuthenticationType.EdgeApiKey}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+				ToolTip="{x:Static root:PluginResources.Auth_Cloud_APICredentials_ToolTip}"
 				Cursor="Hand"
 				Width="176"
 				Height="32"
