--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -64,38 +64,70 @@
 	<Border Background="#f0f0f0">
 		<Grid>
 			<Grid.RowDefinitions>
-				<RowDefinition Height="80" />
+				<RowDefinition Height="Auto" />
 				<RowDefinition Height="*" />
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
 			<!-- Header Image -->
-			<Image Grid.Row="0"
-				   Margin="0 12 12 -12">
-				<Image.Style>
-					<Style TargetType="Image">
-						<Setter Property="Source"
-								Value="../Resources/lwHeader_Main.png" />
-						<Style.Triggers>
-							<DataTrigger Binding="{Binding IsServiceSelected}"
-										 Value="True">
-								<Setter Property="Source"
-										Value="../Resources/lwHeader_Main.png" />
-							</DataTrigger>
-							<DataTrigger Binding="{Binding IsCloudSelected}"
-										 Value="True">
-								<Setter Property="Source"
-										Value="../Resources/lwHeader_Cloud.png" />
-							</DataTrigger>
-							<DataTrigger Binding="{Binding IsEdgeSelected}"
-										 Value="True">
-								<Setter Property="Source"
-										Value="../Resources/lwHeader_Edge.png" />
-							</DataTrigger>
-						</Style.Triggers>
-					</Style>
-				</Image.Style>
-			</Image>
+			
+			<StackPanel Grid.Row="0"
+						Orientation="Horizontal"
+						Margin="0 20 0 16"
+						HorizontalAlignment="Center"
+						VerticalAlignment="Center">
+				<Image Height="48">
+					<Image.Style>
+						<Style TargetType="Image">
+							<Setter Property="Source"
+									Value="../Resources/lwLogo_Main.png" />
+							<Setter Property="RenderOptions.BitmapScalingMode"
+									Value="HighQuality" />
+							<Style.Triggers>
+								<DataTrigger Binding="{Binding IsServiceSelected}"
+											 Value="True">
+									<Setter Property="Source"
+											Value="../Resources/lwLogo_Main.png" />
+								</DataTrigger>
+								<DataTrigger Binding="{Binding IsCloudSelected}"
+											 Value="True">
+									<Setter Property="Source"
+											Value="../Resources/lwLogo_Cloud.png" />
+								</DataTrigger>
+								<DataTrigger Binding="{Binding IsEdgeSelected}"
+											 Value="True">
+									<Setter Property="Source"
+											Value="../Resources/lwLogo_Edge.png" />
+								</DataTrigger>
+							</Style.Triggers>
+						</Style>
+					</Image.Style>
+				</Image>
+
+				<TextBlock Margin="8 0 0 0"
+						   FontSize="32">
+					<TextBlock.Style>
+						<Style TargetType="TextBlock"
+							   BasedOn="{StaticResource Sdl.TextBlock.GenericTitleTextStyle}">
+							<Setter Property="Text"
+									Value="Language Weaver Provider" />
+							<Style.Triggers>
+								<DataTrigger Binding="{Binding IsCloudSelected}"
+											 Value="True">
+									<Setter Property="Text"
+											Value="Language Weaver Cloud" />
+								</DataTrigger>
+								<DataTrigger Binding="{Binding IsEdgeSelected}"
+											 Value="True">
+									<Setter Property="Text"
+											Value="Language Weaver Cloud" />
+								</DataTrigger>
+							</Style.Triggers>
+						</Style>
+					</TextBlock.Style>
+				</TextBlock>
+
+			</StackPanel>
 
 			<!-- Authentication Section -->
 				<Border Grid.Row="1"
@@ -105,7 +137,7 @@
 						BorderBrush="#c0c0c0"
 						BorderThickness="1"
 						CornerRadius="8"
-						Margin="24 12 24 24"
+						Margin="24 0 24 24"
 						Padding="12">
 					<Border.Effect>
 						<DropShadowEffect ShadowDepth="0"
@@ -258,7 +290,7 @@
 						BorderBrush="#c0c0c0"
 						BorderThickness="1"
 						CornerRadius="8"
-						Margin="24 12 24 24"
+						Margin="24 0 24 24"
 						Padding="12">
 					<Border.Effect>
 						<DropShadowEffect ShadowDepth="0"
